--- a/Estacio/HTML/form.html
+++ b/Estacio/HTML/form.html
@@ -81,7 +81,7 @@
         <div class="campo">
             <br>
             <label>Conte um pouco da sua experiência:</label>
-            <textarea name="experiencia" id="experiencia" rows="6"></textarea>
+            <textarea name="experiencia" id="experiencia" rows="6" cols="50"></textarea>
         </div>
 
         <button class="botao" type="submit">Concluido</button>
