--- a/Estacio/HTML/flexbox.html
+++ b/Estacio/HTML/flexbox.html
@@ -14,7 +14,8 @@
 
         .container{
             display: flex;
-            
+            flex-direction: row;
+            flex-wrap: wrap;
         }
 
         .child{
